src/ReservationForm.scss
@import "index.scss";

$max_width_reservation_form: 900px;



.reservation_form {
		background: #F8FAFC;
		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
		border-radius: 24px;
		display: flex;
		flex-direction: column;

		&__backbutton {
			align-self: flex-start;
			color: black !important;
			display: inline;
			background-color: #e2e8f0 !important;
			clip-path: circle(50%);
			padding: 0.5rem !important;
		}

		&__error {
				color: #d97706;
				font-weight: bold;
		}

		&__instructions {
				color: #0284c7;
				display: flex;
				align-items: center;
				gap: 0.25rem;
				font-weight: bold;
				& > .material-icons {
					color: #0ea5e9;
				}
		}
		
		padding: 2rem;
		@include sm {
				padding: 4rem;
		}

		max-width: 1000px;
//		max-width: calc(800px - 4rem);

		&__heading {
				margin-bottom: 1rem;
				display: flex;
				flex-direction: column;

				&__title {
						margin: 0;
						color: #1E293B;
				}
		}
}

.selector {
		&__title {
				font-size: 1.2rem;
				display: flex;
				align-items: center;
				gap: 0.5rem;
				color: #1E293B;
				&__icon {
						color: #475569;
				}
				margin-bottom: 0.5rem;
		}

		&__options {
				display: flex;
				gap: 1rem;
				text-align: center;

				&--longer {
						flex-direction: column;
						text-align:left;
				}
		}
		margin-bottom: 1.5rem;

}

.choose {
		user-select: none;
		&__subtext {
				font-size: 0.75rem;
				text-align: center;
				text-overflow: ellipsis;
				overflow: hidden;
				white-space:nowrap;
				height: 1rem;
				color: #334155;
		}

		&__button {
				cursor: pointer;
				background: #FEFEFE;
				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
				border-radius: 8px;
				color: #374151;
				font-weight: bold;
				display: flex;

			//	&__originalprice {
				& > &__left > s {
					color: #64748b;
					text-decoration: line-through;
					text-decoration-thickness: 2px;
				}

				&--selected {
						box-shadow: none;
						background-color: #059669;
						color: #ecfdf5;

						& > .choose__button__left > s {
							color: #bbf7d0;
						}

						.choose__button__modifier {
								display: none;
						}
				}

				&--disabled {
						box-shadow: none;
						background-color: #cbd5e1;
						color: #334155;

						.choose__button__modifier {
								display: none;
						}
				}

				padding: 1rem;


				&__left {
						flex-grow: 1;
				}

				&__modifier {
						font-weight: normal;
						flex-grow: 0;
						&--error {
								color: #9F0000;
						}

						&--success {
								color: #059669;
						}
				}
		}
}



.reservation_form__submission {
		margin-top: 2rem;
		display: flex;
		flex-direction: column;
		align-items: flex-end;
		gap: 0.5rem;

		&__divider {
			border: 1px solid black;
			height: 0px;
			width: 100%;
		}
}

.slots {
		display: flex;
		flex-direction: column;
		gap: 1rem;
}

.slot {
		padding:0;
		background-color:white; 
		border-radius: 8px;
		max-width: $max_width_reservation_form;
		//max-width: 700px;
		align-self: stretch;

		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

		&__tutor_info {
				display:grid;
				grid-template-columns: 0fr 1fr;
				padding: 1rem;
				gap: 1rem;

				&__image {
						width: 50px;
						height: 50px;

						@include sm {
								width: 70px;
								height: 70px;
						}
						
						@include md {
								width: 80px;
								height: 80px;
						}
						clip-path: circle(50%);
				}

				&__bio {
						display: flex;
						flex-direction: column;
						align-items: flex-start;
						justify-content: center;

						&__name {
								display: flex;
								flex-direction: column;
								justify-content: flex-end;
								font-weight: bold;
						}

						&__qualification {
								color: #334155;
						}

						&__see_more {
								color: #334155;
								font-weight: lighter;
								cursor: pointer;
								padding-top: 0;
								margin-top: 0;
								font-size: 0.75rem;
						}

						&__extended_qualification {
								@include md {
										max-width: 70%;
								}
						}
				}
		}

		&__slot_info {
				background-color: #F1F5F9;
				margin:0;
				padding: 1rem;
				border-bottom-left-radius: 8px;
				border-bottom-right-radius: 8px;
				display: flex;
				align-items: center;

				&__booking_button {
						padding: 0.25rem;
						padding-left: 1rem;
						padding-right: 1rem;
				}

				&__disconnect_button {
						display: flex;
						align-items: center;
						gap: 0.5rem;

						user-select: none;
						cursor: pointer;
						padding: 0.5rem;
						border-radius: 8px;

						&:hover {
								background-color: #e2e8f0;
						}

						&__icon {
								color: #64748b;
						}
				}
				
				&__schedule {
						flex-grow: 1;
						&__recur {
							@include sm {
								display: inline;
							}
							font-weight: bold;
						}

						&__begin {
							@include sm {
								display: inline;
							}
							font-weight: 400;
						}
				}
		}
}

.criteria {
		padding: 1rem;
		background-color:white;
		border-radius: 8px;
		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
		max-width: calc($max_width_reservation_form - 2rem);

		display: flex;
		flex-direction: column;
		gap: 0.5rem;

		&__heading {
			display: flex;
			align-items: center;
			gap: 0.5rem;

			&__title {
				font-weight: bold;
				color: #334155;
				flex-grow:1;
			}

			&__button {
				user-select: none;
				color: #64748b;
				padding:0.5rem;
				clip-path: circle(50%);
				cursor: pointer;
				&:hover {
						background-color: #e2e8f0;
				}
			}
		}

		&--invisible {
				box-shadow: none;
				background-color: transparent;
				padding: 0rem;

		}

		&__bubble {
				background-color:#F1F5F9;
				border-radius: 8px;
				padding: 0.75rem;
				flex-grow: 1;
				text-align: center;
				font-weight: bold;
				color: #334155;

				&__container {
					display: flex;
					flex-wrap: wrap;
					align-items: center;
					justify-content: center;
					gap: 1rem;
				}
		}

		
}

.input_group {
		display: flex;
		flex-direction: column;
		flex-grow:1;
}

.payment_form {
		background-color: #FFFFFF;
		border-radius: 12px;
		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
		display: flex;
		flex-direction: column;
		padding: 2rem;
		gap: 1rem;
		max-width: calc($max_width_reservation_form - 4rem);

		&__error {
				color: #d97706;
				font-weight: bold;
		}


		&__title {
			margin: 0;
			padding: 0;
		}

		&__line {
				display: flex;
				flex-direction: column;
				@include md {
						flex-direction: row;
				}
				gap: 1rem;
				align-items: stretch;
		}

		&__submission_deck {
				display: flex;
				align-items: flex-end;
				justify-content: space-between;
				gap: 1rem;

				&__qualification {
						font-size: 0.75rem;
						max-width: 70%;
				}

				&__submit {
						padding-left: 2rem;
						padding-right: 2rem;
				}
		}
}

.assurance {
		display: flex;
		gap: 0.5rem;
		align-items: center;
		&__icon {
				color: #059669;
				font-size: inherit;
		}
}

.assurances {
		display: flex;
		flex-direction: column;
		gap: 0.5rem;
}

